--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 logs
 *.log
 npm-debug.log*
+yarn-error.log*
 
 # Runtime data
 pids
@@ -38,5 +39,3 @@ jspm_packages
 
 # Output
 lib/
-admin/lib/
-admin/src/styles/style.min.css
