remove object assign dependency

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-bits",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "NodeBits aims to provide you with an easy way to get a site up and running quickly.",
   "main": "lib/index.js",
   "scripts": {
@@ -19,8 +19,7 @@
   },
   "homepage": "https://github.com/jgretz/node-bits#readme",
   "dependencies": {
-    "lodash": "^4.17.2",
-    "object-assign": "^4.0.1"
+    "lodash": "^4.17.2"
   },
   "devDependencies": {
     "babel-cli": "^6.10.1",
