--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
   },
   "devDependencies": {
     "babel-cli": "^6.10.1",
-    "babel-core": "6.13.2",
-    "babel-eslint": "6.1.2",
+    "babel-core": "^6.18.2",
+    "babel-eslint": "^7.1.1",
     "babel-plugin-module-resolver": "^2.2.0",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-1": "^6.5.0",
-    "babel-register": "6.11.6",
+    "babel-register": "^6.18.0",
     "eslint": "^3.1.1",
-    "eslint-plugin-import": "^1.9.2",
+    "eslint-plugin-import": "^2.2.0",
     "nodemon": "^1.9.2",
     "shelljs": "^0.7.4"
   }
