--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-bits",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "NodeBits aims to provide you with an easy way to get a site up and running quickly.",
   "main": "lib/index.js",
   "scripts": {
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/jgretz/node-bits#readme",
   "dependencies": {
+    "chalk": "^1.1.3",
     "lodash": "^4.17.3"
   },
   "devDependencies": {
