add timer functions

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-bits",
-  "version": "0.0.16",
+  "version": "0.0.17",
   "description": "NodeBits aims to provide you with an easy way to get a site up and running quickly.",
   "main": "lib/index.js",
   "scripts": {
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/jgretz/node-bits#readme",
   "dependencies": {
     "chalk": "^1.1.3",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "timer-machine-node": "^1.1.2"
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
