--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-bits",
   "version": "0.0.19",
-  "description": "NodeBits aims to provide you with an easy way to get a site up and running quickly.",
+  "description": "node-bits is a node microframework with the aim of providing \"just enough\" magic to enable you to quickly and painlessly build your api / site.",
   "main": "lib/index.js",
   "scripts": {
     "start": "nodemon src/index.js --exec babel-node",
@@ -18,6 +18,7 @@
     "url": "https://github.com/jgretz/node-bits/issues"
   },
   "homepage": "https://github.com/jgretz/node-bits#readme",
+  "keywords": "node-bits,node,microframework,server",
   "dependencies": {
     "chalk": "^1.1.3",
     "lodash": "^4.17.4",
