--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-bits",
-  "version": "0.0.27",
+  "version": "0.0.28",
   "description": "node-bits is a node microframework with the aim of providing \"just enough\" magic to enable you to quickly and painlessly build your api / site.",
   "main": "lib/index.js",
   "scripts": {
@@ -21,6 +21,7 @@
   "keywords": "node-bits,node,microframework,server",
   "dependencies": {
     "chalk": "^1.1.3",
+    "deepmerge": "^1.4.4",
     "lodash": "^4.17.4",
     "timer-machine-node": "^1.1.2"
   },
